# small-lang

./: .gitignore  CMakeLists.txt  README.md  ast_printer.cpp  ast_repl.cpp  gpt_test.cpp  old_compile  run_examples.sh  small.cpp  sml.cpp  test_compile.cpp  visual.py
bad_examples/: badassign.small  badtype_expression.small  badtype_return.small  missing_var.small  missing_var2.small  not_a_function.small  statement_error.small  wrong_arg_count.small
examples/: cast.small  ffi.small  function_pointers.small  function_pointers.sml  hard_int_comps.small  if_example.small  int_bool_cast.small  linked_list.small  nested_ifs.small  pointers.small
src/: ast.hpp  ast_print.hpp  compiler.cpp  compiler.hpp  ir_print.hpp  jit.cpp  jit.hpp  parser.cpp  parser.hpp  scope.hpp  utils.hpp
